<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SplashActivity!</string>
    <string name="app_name">My App</string>
    <string name="btnRuleSave">SAVE</string>
    <string name="btnRuleSel">SELECT</string>
    <string name="btnRuleCancel">Cancel</string>
    <string name="stryourrule">My App</string>
	<string name="strnewrule">**** CREATE YOUR RULE HERE ****</string>
	<string name="strRulType">SELECT RULE TYPE</string>
	<string name="strRuleName">ENTER RULE NAME HERE</string>
	<string name="selCategory">Select your trigger category</string>
    <string name="strRuleLabel">Rule Name</string>
    <string name="btnRulePop">Select Rule</string>
    <string name="strRuleActPeriod">Rule Active </string>
    
    
    <style name="buttonText">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
        <item name="android:paddingLeft">15dp</item>
        <item name="android:paddingRight">15dp</item>
    </style>
    
    <string-array name="planets_array">
        <item>Towards</item>
        <item>Away</item>
    </string-array>
        <string-array name="trig_action">
        <item>Show Notification</item>
        <item>Switch on Wifi</item>
        <item>Vibrate</item>
        <item>Play music</item>
    </string-array>
</resources>