<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<!-- Text view to display the textbox name -->
	
	   <TextView android:id="@+id/ruleLabel"
	        android:text="@string/strRuleLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#FF000000"
			android:layout_marginTop="10dp" 
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			/>
	    		
	
	<!-- Text field to enter the name of the rule -->
	
	<EditText android:id="@+id/ruleName"
	    	android:hint="@string/strnewrule"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#FF000000"
			android:layout_marginBottom="10dp" 
			android:layout_marginTop="5dp"
			android:layout_below="@+id/ruleLabel"
			android:layout_alignLeft="@+id/ruleLabel"
			/>
	<Button
		    android:id="@+id/btnRuleSave"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@drawable/btn_lightblue_glossy"
		    android:text="@string/btnRulePop" 
		    android:layout_marginBottom="10dp" 
			android:layout_marginTop="5dp"
			android:layout_below="@+id/ruleName"
			android:layout_alignLeft="@+id/ruleLabel"
		    />
	
</RelativeLayout>